# rrbot_simulation_files

./: README.md
rrbot_description/gazebo/: rrbot.gazebo.xacro
rrbot_description/ros2_control/: rrbot.ros2_control.xacro
rrbot_description/urdf/: rrbot.urdf.xacro  rrbot_description.urdf.xacro
rrrbot_gazebo/: CMakeLists.txt  package.xml
rrrbot_gazebo/launch/: rrbot_world.launch.py
rrrbot_gazebo/src/: controller_switch.cpp  main_controller.cpp  position_control.cpp  position_publisher.cpp  theta_ref_server.cpp  vel_server.cpp  velocity_controller.cpp  velocity_kinematics.cpp
rrrbot_gazebo/srv/: ThetaRef.srv
tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_interfaces/srv/: EndToJoint.srv  JointToEnd.srv  PositionControl.srv  ThetaNewRef.srv
